2009-10-20  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-06-18-00
	* branch tag for 327 compat
	* use bst timestamp
	
2009-10-19  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-07-01-00
	* branch for 33x to use bst timestamp
	
2009-10-19  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-07-00/01
	* Undocumented mods by Bill to reuse event principal

2009-07-08  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-06-18
	* Complete the migration away from getter functions for FEDNumbering
	
2009-07-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V01-06-17
	* add 'DaqBaseReader::setRunNumber()' function, and use it in the
	DaqSource.
	* the change was suggested by Kurt Bieri to fix the problem where
	error events generated by the FUShmReader are generated with an
	invalid run number.

2009-07-02 Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V01-06-16 (V01-06-15 used by uncharted update of CLHEP)
	* merge from branch for 3_1_XV01-06-15
	
2009-04-28  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V01-06-12-05 (on branch)
	* add missing getter call to obtain prescale index and pass it on

2009-04-09  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V01-06-12-04 (on branch)
	* adapt to change in evtn interface
	* set experimentType and timeStamp from EVM data 

2009-02-11 William Tanenbaum <wmtan@fnal.gov>
	* tag V01-06-14
	* Use new names for event types (from EventAuxiliary)

2008-11-27  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V01-06-12-03
	* branch tag for 2XX series for online use. Fix problem with fake 
	events and access to gt data

2008-11-04  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V01-06-12-02
	* branch tag for 2XX series to allow release of DaqSource for online use

2008-10-17  Emilio Meschi  <emilio.meschi@cern.ch>
	* tag V01-06-13
	* use timeout for LS in scalers access (cond_timedwait)
	* enable use of gtpe orbit/bx and ls
	* requires EventFilter/Utilities V00-14-16-01 or later (see changelog)
	